初始化 筛选按钮布局，初始化属性按钮监听